--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 } */
 
 /* date_time.css */
-.DateInput_input {
+/* .DateInput_input {
   padding: 0px 10px 0px;
 }
 
@@ -43,15 +43,13 @@
 .DateRangePickerInput {
   width: 430px !important;
   text-align: center;
-  /*     padding-left: 3px !important; */
-  /*     padding-right: 1px !important;} */
 }
 .DateRangePickerInput_1 {
 }
 .DateRangePickerInput__withBorder {
 }
 .DateRangePickerInput__withBorder_2 {
-}
+} */
 
 /* grid.css */
 
