--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* datatable_style.css */
 
-/* #table1 .dash-spreadsheet-container .dash-spreadsheet-inner table {
+#table1 .dash-spreadsheet-container .dash-spreadsheet-inner table {
   --accent: blue !important;
   --selected-background: rgba(0, 100, 200, 0.3) !important;
 }
@@ -12,10 +12,10 @@
   font-size: 12px;
   padding: 15px;
   font-family: Arial, Helvetica, sans-serif;
-} */
+}
 
 /* date_time.css */
-/* .DateInput_input {
+.DateInput_input {
   padding: 0px 10px 0px;
 }
 
@@ -43,13 +43,15 @@
 .DateRangePickerInput {
   width: 430px !important;
   text-align: center;
+  /*     padding-left: 3px !important; */
+  /*     padding-right: 1px !important;} */
 }
 .DateRangePickerInput_1 {
 }
 .DateRangePickerInput__withBorder {
 }
 .DateRangePickerInput__withBorder_2 {
-} */
+}
 
 /* grid.css */
 
